Animation of some moveable Objects realized

--- a/Basics.Web/Client/Basics.Web.Client.csproj
+++ b/Basics.Web/Client/Basics.Web.Client.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Basics\Basics\Basics.csproj" />
+    <ProjectReference Include="..\..\Animation\Animation.csproj" />
   </ItemGroup>
 
   <ItemGroup>
