--- a/Basics.Web/Client/Basics.Web.Client.csproj
+++ b/Basics.Web/Client/Basics.Web.Client.csproj
@@ -23,6 +23,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="wwwroot\TwoDrawingContainer.js">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Update="wwwroot\DrawingContainer.js">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
